--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "offline": "serverless offline --stage dev --region us-west-1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "mysql": "^2.18.1",
     "serverless-offline": "^12.0.4"
